<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Enhanced Alarm</string>
  <string name="action_settings">Settings</string>

  <!-- Timer List Item Strings -->
  <string name="delay_header">Start Delay</string>
  <string name="interval_header">Interval</string>
  <string name="repeat_header">Repeat</string>
  <string name="edit_button">EDIT</string>
  <string name="add_button">ADD</string>
  <string name="default_timestamp">00:00:00</string>
  <string name="default_interval">30</string>
  <string name="default_delay">5</string>

  <!-- Edit Timer Strings -->
  <string name="title_activity_edit_timer">Edit Timer</string>
  <string name="interval_text">Interval:</string>
  <string name="delay_text">Delay:</string>
  <string name="done_button">Done</string>
  <string name="remove_button">Remove</string>
  <string name="vibration_test">Test</string>

  <!--Time Input Strings -->
  <string name="cancel_button">Cancel</string>
  <string name="hour_symbol">h</string>
  <string name="minute_symbol">m</string>
  <string name="second_symbol">s</string>

  <!-- Alarm List Item Strings -->
  <string name="alarm_time_label">Time:</string>
  <string name="alarm_label_label">Label:</string>
  <string name="default_alarm_time">00:00</string>
  <string name="colon">:</string>
  <string name="default_label">No Label</string>
  <string name="am">AM</string>
  <string name="pm">PM</string>
  <string name="twentyFourHour">24h</string>
  <string name="never">Never</string>
  <string name="trigger_on">Trigger on:</string>

  <!-- Numbers -->
  <string name="zero">0</string>
  <string name="one">1</string>
  <string name="two">2</string>
  <string name="three">3</string>
  <string name="four">4</string>
  <string name="five">5</string>
  <string name="six">6</string>
  <string name="seven">7</string>
  <string name="eight">8</string>
  <string name="nine">9</string>
  <string name="title_activity_timer_input">Timer Input</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Days of the week -->
  <string name="saturday">Saturday</string>
  <string name="sunday">Sunday</string>
  <string name="monday">Monday</string>
  <string name="tuesday">Tuesday</string>
  <string name="wednesday">Wednesday</string>
  <string name="thursday">Thursday</string>
  <string name="friday">Friday</string>
  <string name="saturday_abbrev">Sa</string>
  <string name="sunday_abbrev">Su</string>
  <string name="monday_abbrev">Mo</string>
  <string name="tuesday_abbrev">Tu</string>
  <string name="wednesday_abbrev">We</string>
  <string name="thursday_abbrev">Th</string>
  <string name="friday_abbrev">Fr</string>

  <string name="select_band">Select a band</string>

  <string name="no_bands_found">No bands found… Check if any are connected?</string>
  <string name="title_activity_toolbar">Toolbar</string>

  <string name="tab_timers">Timers</string>
  <string name="tab_alarms">Alarms</string>
  <string name="title_activity_timers">TimersActivity</string>


  <string name="title_activity_alarms">AlarmsActivity</string>
  <string name="title_activity_edit_alarm">EditAlarmActivity</string>

  <string name="hello_world">Hello world!</string>
  <string name="title_activity_common">CommonActivity</string>
  <string name="title_activity_alarm_input">AlarmInputActivity</string>
</resources>
