<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      tools:context="org.champgm.enhancedalarm.timerui.EditTimerActivity">

    <TextView
        android:id="@+id/alarmLabelLabel"
        android:layout_width="wrap_content"
        android:maxLength="6"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="83dp"
        android:text="@string/alarm_label_label"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/alarmLabel"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/alarmLabelLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:text="@string/default_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_below="@id/alarmLabelLabel"
        android:layout_marginStart="50dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/alarm_time_label"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/alarmTime"
        android:maxLength="9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/timeLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:text="@string/default_alarm_time"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/amPmTwentyFourHour"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alarmTime"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal">

      <Button
          android:id="@+id/amButton"
          android:text="@string/am"
          android:textSize="15sp" />

      <Button
          android:id="@+id/pmButton"
          android:text="@string/pm"
          android:textSize="15sp" />

      <Button
          android:id="@+id/twentyFourHourButton"
          android:text="@string/twentyFourHour"
          android:textSize="15sp" />

    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/daysList"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amPmTwentyFourHour"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:columnCount="7"
                android:orientation="horizontal">

      <Button
          android:id="@+id/sundayButton"
          android:text="@string/sunday_abbrev"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:textSize="15sp" />

      <Button
          android:id="@+id/mondayButton"
          android:text="@string/monday_abbrev"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:textSize="15sp" />

      <Button
          android:id="@+id/tuesdayButton"
          android:text="@string/tuesday_abbrev"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:textSize="15sp" />

      <Button
          android:id="@+id/wednesdayButton"
          android:text="@string/wednesday_abbrev"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:textSize="15sp" />

      <Button
          android:id="@+id/thursdayButton"
          android:text="@string/thursday_abbrev"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:textSize="15sp" />

      <Button
          android:id="@+id/fridayButton"
          android:text="@string/friday_abbrev"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:textSize="15sp" />

      <Button
          android:id="@+id/saturdayButton"
          android:text="@string/saturday_abbrev"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:textSize="15sp" />

    </GridLayout>



    <Spinner
        android:id="@+id/vibrationPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daysList"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/vibration_test"
        android:spinnerMode="dialog"/>

    <Button
        android:id="@+id/vibration_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/vibrationPicker"
        android:text="@string/vibration_test"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vibrationPicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/done_button"/>

    <Button
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/done_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/remove_button"/>

  </RelativeLayout>
</ScrollView>