<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="top">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100sp"
                    android:layout_marginBottom="50sp">

      <TextView
          android:id="@+id/hour_tens"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/zero"
          android:textSize="@dimen/timer_input_timestamp_number_size" />

      <TextView
          android:id="@+id/hour_ones"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@id/hour_tens"
          android:text="@string/zero"
          android:textSize="@dimen/timer_input_timestamp_number_size" />

      <TextView
          android:id="@+id/colon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@id/hour_ones"
          android:layout_marginBottom="5dp"
          android:layout_marginEnd="5dp"
          android:layout_toEndOf="@id/hour_ones"
          android:text="@string/colon"
          android:textSize="@dimen/timer_input_timestamp_symbol_size" />

      <TextView
          android:id="@+id/minute_tens"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@id/colon"
          android:text="@string/zero"
          android:textSize="@dimen/timer_input_timestamp_number_size" />

      <TextView
          android:id="@+id/minute_ones"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@id/minute_tens"
          android:text="@string/zero"
          android:textSize="@dimen/timer_input_timestamp_number_size" />


      <ImageButton
          android:id="@+id/backspace"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_toEndOf="@id/minute_ones"
          android:src="@android:drawable/ic_input_delete" />

    </RelativeLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/keypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal">

      <Button
          android:id="@+id/keypad_one"
          android:text="@string/one"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_two"
          android:text="@string/two"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_three"
          android:text="@string/three"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_four"
          android:text="@string/four"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_five"
          android:text="@string/five"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_six"
          android:text="@string/six"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_seven"
          android:text="@string/seven"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_eight"
          android:text="@string/eight"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_nine"
          android:text="@string/nine"
          android:textSize="30sp" />

      <Button
          android:id="@+id/keypad_zero"
          android:layout_column="1"
          android:text="@string/zero"
          android:textSize="30sp" />

    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/keypad"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:columnCount="3"
                android:orientation="horizontal">

      <Button
          android:id="@+id/control_cancel"
          android:text="@string/cancel_button"
          android:textSize="30sp" />

      <Button
          android:id="@+id/control_done"
          android:layout_marginStart="25dp"
          android:text="@string/done_button"
          android:textSize="30sp" />
    </GridLayout>

  </RelativeLayout>
</ScrollView>