<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/time_group"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp"
                  android:gravity="center">

    <TextView
        android:id="@+id/alarmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/alarmTime"
        android:layout_below="@id/alarmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_alarm_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginEnd="5dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/ampm"
        android:layout_toEndOf="@id/alarmTime"
        android:layout_alignBottom="@id/alarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/daysLabel"
        android:layout_below="@id/alarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trigger_on"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/daysList"
        android:layout_below="@id/alarmTime"
        android:layout_toEndOf="@id/daysLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday_abbrev"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

  </RelativeLayout>


  <Button
      android:id="@+id/edit_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_centerVertical="true"
      android:text="@string/edit_button" />

</RelativeLayout>