<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/interval_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/interval_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:text="@string/interval_header"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/interval_header"
            android:layout_centerInParent="true"
            android:text="@string/default_interval"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/delay_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/interval_group"
        android:gravity="center">

        <TextView
            android:id="@+id/delay_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:text="@string/delay_header"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/delay_header"
            android:layout_centerInParent="true"
            android:text="@string/default_delay"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/repeat_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/delay_group"
        android:gravity="center">

        <TextView
            android:id="@+id/repeat_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:text="@string/repeat_header"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeat_header"
            android:layout_centerInParent="true"
            android:text="@string/default_repeat"
            android:textSize="30sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/repeat_group"
        android:layout_marginStart="30dp"
        android:text="@string/edit_button" />

</RelativeLayout>